deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
